Fixing frontend SonarQube issues