@@ -2,10 +2,14 @@ package com.careerpath.application.mapper;
 
 import com.careerpath.application.dto.JobListingDto;
 import com.careerpath.domain.model.JobListing;
-
-import java.util.stream.Collectors;
+import com.careerpath.domain.model.Skill;
 
 public class JobListingDtoMapper {
+
+    private JobListingDtoMapper() {
+        throw new UnsupportedOperationException("Utility class");
+    }
+
     public static JobListingDto toDto(JobListing job) {
         return new JobListingDto(
                 job.getId(),
@@ -17,8 +21,8 @@ public class JobListingDtoMapper {
                 job.getStatus(),
                 job.getExpiresAt(),
                 job.getSkills().stream()
-                        .map(skill -> skill.getName())
-                        .collect(Collectors.toList())
+                        .map(Skill::getName)
+                        .toList()
         );
     }
 }
